examples/typeError/typeErrorInTermHeadPair.lcp
Nat = Data(X)< Zero () | Succ X >
NatList = Record(X){ .head : Nat | .tail : X }

f : Nat -> Nat
f x = (22,22) 1
